ws-slo/apps/jellyfin/components/tls/patch-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: jellyfin
spec:
  ports:
    - name: https
      appProtocol: https
      port: 8920
      targetPort: https
